# deepdecoder

./: .gitignore  GeneratedGridTrainer.py  Makefile  README.md  conftest.py  generate_background.py  pytest.ini  requirements.txt  setup.py  setup_dev_enviroment.sh  train_dcgan.ipynb
all_degree/: all_degree_model.py
config/: build_real_dataset_settings.json  find_tags_setting.json  find_tags_setting.yaml  generate_3d_tags_settings.json  generate_3d_tags_settings.yaml  localizer_preprocessed_images_setting.json  localizer_preprocessed_images_setting.yaml  localizer_settings.yaml  network_3d_tag_settings.yaml  real_images_setting.yaml  render_gan_settings.yaml
deepdecoder/: GeneratedGridTrainer.py  adaptive_sampling.py  augmentation.py  command_line.py  data.py  dcgan_train.py  dcmogan.py  deconv.py  evaluate.py  evaluate_mask_losses.py  grid_curriculum.py  keras_fix.py  layers.py  mask_loss.py  model_utils.py  mogan.py  mutliple_objectives.py  networks.py  render_gan.py  train.py  transform.py  utils.py  visualise.py
deepdecoder/cuda/: CMakeLists.txt  mask_split.cu
docker/: Dockerfile  Makefile  README.md  generate_user_dockerfile.sh  keras.json  theanorc
experiments/: README.md  blending_mask_gan.ipynb  build_tag_dataset.ipynb  check_driver_distribution.ipynb  evaluate_loss_fn.ipynb  g_grid_curriculum.ipynb  gan_train.ipynb  generator_add_noise.ipynb  generator_self_similarity.ipynb  mogan_evaluate_gradients.ipynb  pycuda.ipynb  sigma blur.ipynb  test_mask_losses.ipynb  train_dcgan.ipynb  train_dcgan_mo.ipynb  train_diff_gan.ipynb  train_mogan_learn_bw_grid.ipynb
(+90 files in other folders)
